<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="budget_buddy">Budget Buddy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_id">com.example.budgetbuddy.preference_currency_transaction</string>
    <string name="global_currency_id">com.example.budgetbuddy.preference_currency_global</string>
    <string name="global_themes_id">com.example.budgetbuddy.preference_themes_global</string>
    <string name="selected_tab">selected_tab_transaction</string>
    <string name="future">Future</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_reports">See reports</string>
    <string name="spending_reports">Spending Reports</string>
    <string name="top_spending">Top Spending</string>
    <string name="last_month">Last Month</string>
    <string name="this_month">This Month</string>
    <string name="click_to_add_spending_this_month">Click + to add  spending this month</string>
    <string name="added_transaction_will_show_up_here">Added transaction will show up here</string>
    <string name="day">Day</string>
    <string name="select_time_range">Select time range</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="reports">Reports</string>
    <string name="expense">Expenses</string>
    <string name="no_records_found">No records found</string>
    <string name="transactions">Transactions</string>
    <string name="inflow">Inflow</string>
    <string name="expenses">Expenses</string>
    <string name="view_report_this_period">View report this period</string>
    <string name="delete">Delete</string>
    <string name="my_wallets">My Wallets</string>
    <string name="see_all">See All</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="write_note">Write note</string>
    <string name="select_category">Select Category</string>
    <string name="amount">Amount</string>
    <string name="today">Today</string>
    <!--   prod ca-app-pub-1363370537348771/6516432885-->
    <!--   free ca-app-pub-3940256099942544/6300978111-->
    <string name="google_admob">ca-app-pub-3940256099942544/6300978111</string>
    <string name="in_app_product_id">remove_ad_prod_one</string>

    <string name="on_boarding_shared_pref">on_boarding_shared_pref</string>
    <string name="on_boarding_finised">on_boarding_finised</string>
    <string name="purchase_restored">purchase_stored_aye_shared_pref</string>
    <string name="user_purchased_premium">user_purchased_premium_shared_pref</string>
    <string name="cancel">Cancel</string>
    <string name="global_wallet_id">global_wallet_id</string>
    <string name="about">About</string>
    <string name="view_on_google_play">https://play.google.com/store/apps/details?id=com.budget.budgetbuddy.aye</string>
</resources>