<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/recent_transactions"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRecentReports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/see_reports"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        card_view:cardBackgroundColor="@color/card_view_bg_color"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_transaction_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/added_transaction_will_show_up_here"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>