<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbar_bg_color">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:menu="@menu/add_transaction"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/add_new_entry" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="@color/card_view_bg_color"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <ImageButton-->
<!--                    android:id="@+id/imgCurrency"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="45dp"-->
<!--                    android:background="@drawable/european_union"-->
<!--                    app:srcCompat="@drawable/philippines"/>-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/imgCurrency"
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:text="GBP"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/image_tint"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:focusable="true"
                    android:hint="@string/amount"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtAmount"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:gravity="left"
                        android:inputType="numberDecimal"
                        android:maxLength="7"
                        android:textColor="@color/text_color_white_black"
                        android:textSize="33sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/categoryLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:focusable="false"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgCategory"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_circle_24" />

                    <TextView
                        android:id="@+id/txtCategory"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/select_category"
                        android:textColor="@color/dark"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/categoryNext"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="5"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/noteLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:focusable="false"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgNote"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_notes_24" />

                    <TextView
                        android:id="@+id/txtNote"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/write_note"
                        android:textColor="@color/dark"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="5"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dateLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:focusable="false"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_baseline_calendar_month_24"
                        app:tint="@color/image_tint" />

                    <TextView
                        android:id="@+id/txtDate"
                        style="?android:listSeparatorTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/today"
                        android:textColor="@color/text_color_white_black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="5"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        android:visibility="visible"
        ads:adUnitId="@string/google_admob">
    </com.google.android.gms.ads.AdView>
<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        card_view:cardBackgroundColor="@color/surface"-->
<!--        card_view:cardCornerRadius="10dp"-->
<!--        card_view:cardElevation="10dp">-->

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnDelete"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/surface"-->
<!--            android:text="Save"-->
<!--            android:enabled="true"-->
<!--            android:elevation="10dp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textStyle="bold" />-->
<!--    </androidx.cardview.widget.CardView>-->


</LinearLayout>